--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^15.0.0",
     "react-google-maps": "^8.3.3",
     "recompose": "^0.25.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "escape-string-regexp": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
