--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-foursquare": "^1.0.3",
     "react-google-maps": "^8.3.3",
     "recompose": "^0.25.1",
     "react-scripts": "1.1.4",
